--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,7 +10,7 @@
 	overflow: hidden;
 	border-radius: $radius;
 	color: $gray;
-	
+
 	&.minify {
 		height: 185px;
 		#playlist {
@@ -44,11 +44,11 @@
 			}
 			.audio-flag {
 				position: absolute;
-				top: 17px;
+				top: 14px;
 				right: 40px;
-				height: 30px;
-				width: 30px;
-				background:url(../img/repeat.svg) no-repeat;
+				height: 36px;
+				width: 36px;
+				background:url(../img/error.svg) no-repeat;
 
 			}
 		}
@@ -102,18 +102,19 @@
 			transform: translateX(-20px);
 			li {
 				position: relative;
-				&#audio-time {
-					width: 100px;
+				&.audio-time {
+					width: 45px;
 				}
 				&#audio-range {
-					width: 220px;
+					width: 215px;
 				}
 				&#volume-range {
 					width: 140px;
+					margin-left: 20px;
 				}
 				span#current-time,
 				span#full-time {
-					width: 50px;
+					width: 40px;
 					display: inline-block;
 					float: left;
 				}
@@ -124,7 +125,8 @@
 				}
 				#volumeslider {
 					width: 100px;
-					float: right;
+					float: left;
+					margin-left: 10px;
 					display: inline-block;
 					-o-transform: translateY(4px);
 					-ms-transform: translateY(4px);
@@ -132,11 +134,11 @@
 					-webkit-transform: translateY(4px);
 				}
 				#seekslider {
-					width: 88%;
-					-o-transform: translateY(-3px);
-					-ms-transform: translateY(-3px);
-					-moz-transform: translateY(-3px);
-					-webkit-transform: translateY(-3px);
+					width: 93%;
+					-o-transform: translateY(-2px);
+					-ms-transform: translateY(-2px);
+					-moz-transform: translateY(-2px);
+					-webkit-transform: translateY(-2px);
 				}
 			}
 		}
